<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://apache.org"
  xmlns:xsi="http://w3.org"
  xsi:schemaLocation="http://apache.org http://apache.org">
  <modelVersion>4.0.0</modelVersion>

  <groupId>es.maneldevs</groupId>
  <artifactId>authjar</artifactId>
  <version>1.0.0-SNAPSHOT</version>

  <properties>
    <!-- Configuración para compilar con la versión Java 25 -->
    <maven.compiler.source>25</maven.compiler.source>
    <maven.compiler.target>25</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <!-- Versiones estables de las dependencias -->
    <javalin.version>7.2.2</javalin.version>
    <jackson.version>2.18.2</jackson.version>
    <hikari.version>6.3.0</hikari.version>
    <postgres.version>42.7.7</postgres.version>
    <flyway.version>11.3.1</flyway.version>
    <jte.version>3.1.6</jte.version>
    <dotenv.version>3.2.0</dotenv.version>
    <slf4j.version>2.0.17</slf4j.version>
  </properties>

  <dependencies>

    <!-- Servidor Web y REST API: Javalin -->
    <dependency>
      <groupId>io.javalin</groupId>
      <artifactId>javalin</artifactId>
      <version>${javalin.version}</version>
    </dependency>

    <!-- Puente de Renderizado JTE exclusivo para Javalin 7 -->
    <dependency>
      <groupId>io.javalin</groupId>
      <artifactId>javalin-rendering-jte</artifactId>
      <version>${javalin.version}</version>
    </dependency>

    <!-- Motor de Plantillas: JTE (Java Template Engine) -->
    <dependency>
      <groupId>gg.jte</groupId>
      <artifactId>jte</artifactId>
      <version>${jte.version}</version>
    </dependency>

    <!-- JSON: Jackson Databind (Para conversión automática de objetos en Javalin) -->
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>${jackson.version}</version>
    </dependency>

    <!-- Pool de Conexiones de Base de Datos: HikariCP -->
    <dependency>
      <groupId>com.zaxxer</groupId>
      <artifactId>HikariCP</artifactId>
      <version>${hikari.version}</version>
    </dependency>

    <!-- Driver JDBC: PostgreSQL -->
    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <version>${postgres.version}</version>
    </dependency>

    <!-- Migración de Base de Datos: Flyway (Núcleo y soporte específico para Postgres) -->
    <dependency>
      <groupId>org.flywaydb</groupId>
      <artifactId>flyway-core</artifactId>
      <version>${flyway.version}</version>
    </dependency>
    <dependency>
      <groupId>org.flywaydb</groupId>
      <artifactId>flyway-database-postgresql</artifactId>
      <version>${flyway.version}</version>
    </dependency>

    <!-- Variables de entorno desde archivo .env (Para Desarrollo Local) -->
    <dependency>
      <groupId>io.github.cdimascio</groupId>
      <artifactId>dotenv-java</artifactId>
      <version>${dotenv.version}</version>
    </dependency>

    <!-- Implementación de Logs (Requerido para silenciar alertas de Javalin y Hikari) -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>${slf4j.version}</version>
    </dependency>

    <!-- Manejo de tokens JWT -->
    <dependency>
      <groupId>com.auth0</groupId>
      <artifactId>java-jwt</artifactId>
      <version>4.6.0</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <!-- Plugin para asegurar la compilación correcta en Java 25 -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
      </plugin>

      <!-- Plugin de JTE: Traduce las plantillas .jte a clases Java antes de empaquetar -->
      <plugin>
        <groupId>gg.jte</groupId>
        <artifactId>jte-maven-plugin</artifactId>
        <version>${jte.version}</version>
        <executions>
          <execution>
            <phase>generate-sources</phase>
            <goals>
              <goal>generate</goal>
            </goals>
            <configuration>
              <sourceDirectory>${project.basedir}/src/main/resources/templates</sourceDirectory>
              <contentType>Html</contentType>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <!-- Plugin de Google Jib: Construye la imagen Docker de manera eficiente sin Dockerfile -->
      <plugin>
        <groupId>org.googlecontainertools</groupId>
        <artifactId>jib-maven-plugin</artifactId>
        <version>3.4.4</version>
        <configuration>
          <!-- Imagen base oficial de Eclipse Temurin para Java 25 (JRE ligero para producción) -->
          <from>
            <image>eclipse-temurin:25-jre</image>
          </from>
          <!-- Etiqueta de la imagen de salida -->
          <to>
            <image>mi-usuario-docker/mi-proyecto-java:latest</image>
          </to>
          <container>
            <!-- Define la clase que contiene tu método public static void main -->
            <mainClass>es.maneldevs.Main</mainClass>
            <!-- Puerto expuesto por tu aplicación -->
            <ports>
              <port>8080</port>
            </ports>
          </container>
        </configuration>
      </plugin>
    </plugins>

    <pluginManagement>
      <plugins>
        <!-- Metadata exclusiva para el tooling m2e (VSCode/Eclipse): evita el warning
             "Plugin execution not covered by lifecycle configuration" y hace que el
             editor ejecute jte-maven-plugin en cada build incremental. No afecta a mvn. -->
        <plugin>
          <groupId>org.eclipse.m2e</groupId>
          <artifactId>lifecycle-mapping</artifactId>
          <version>1.0.0</version>
          <configuration>
            <lifecycleMappingMetadata>
              <pluginExecutions>
                <pluginExecution>
                  <pluginExecutionFilter>
                    <groupId>gg.jte</groupId>
                    <artifactId>jte-maven-plugin</artifactId>
                    <versionRange>[${jte.version},)</versionRange>
                    <goals>
                      <goal>generate</goal>
                    </goals>
                  </pluginExecutionFilter>
                  <action>
                    <execute>
                      <runOnIncremental>true</runOnIncremental>
                    </execute>
                  </action>
                </pluginExecution>
              </pluginExecutions>
            </lifecycleMappingMetadata>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>